Добавление Login, struct: LoginUser, переписал UserResponse. Косметика Добавил валидацию e-mail
