# docs/swagger.json
@@ -114,6 +114,40 @@
                 }
             }
         },
+        "/users/login": {
+            "post": {
+                "description": "Проверяет учетные данные пользователя и возвращает информацию о нем.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Авторизация пользователя",
+                "parameters": [
+                    {
+                        "description": "Данные для авторизации",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.LoginUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешная авторизация",
+                        "schema": {
+                            "$ref": "#/definitions/user.LoginUser"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "description": "Retrieves information about a user by their ID.",
@@ -224,6 +258,17 @@
                 }
             }
         },
+        "user.LoginUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "user.UserResponse": {
             "type": "object",
             "properties": {
@@ -231,7 +276,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "description": "Возможно придется убрать json",
                     "type": "string"
                 }
             }
